fix(sidebar): shrink space in the top to align with topbar

--- a/src/Components/Topbar/Topbar.css
+++ b/src/Components/Topbar/Topbar.css
@@ -179,7 +179,7 @@
 .navbar-title {
   background-color: #f3f3f3;
   width: 100%;
-  height: 60px;
+  height: 50px;
   display: flex;
   justify-content: center;
   align-items: center;
